Java 8 bug fix: could not read files